# infobooks-bot

./: .gitignore  Makefile  README.md  aiogram_run.py  create_bot.py  pyproject.toml
bibliosites/: fantlab.py
cache/goodreads/: 209288912  9785041958701  stats?id=209288912
cache/storygraph/: a477e024-e187-4407-ac9e-38d8c3579ea9
cache/storygraph/app.thestorygraph.com/: browse  contact-us  giveaways  index.html  manifest.json  news-feed  reading_challenges
cache/storygraph/app.thestorygraph.com/authors/: 70e56679-d4f7-4f3d-a393-6c80a6206331  7e5d57f2-4072-4697-bdc1-007303e289b4  a8926148-289d-4f57-8021-cc98000494f6  b0cf2339-a147-4668-a78f-d9bec0477450  b96fa204-e28b-4f73-93d8-6fdbe0c72f30
cache/storygraph/app.thestorygraph.com/books/: be049e13-9e22-4b99-82f5-41fc739ae7e1
cache/storygraph/app.thestorygraph.com/books/10acce6a-fa33-4c05-a3b8-72f8fa3fda4d/: editions
cache/storygraph/app.thestorygraph.com/books/2857151c-82c2-44d0-b278-594fdab44b6a/: editions
cache/storygraph/app.thestorygraph.com/series/: 1289281  1291973
cache/storygraph/app.thestorygraph.com/users/: sign_in
db/: author_class.py  cache_manager_redis.py  connect_redis.py  edition_class.py  work_class.py
handlers/: common.py  search_author_name.py  search_edition_isnb.py  search_states.py  search_work_name.py  start.py
infobooks_bot/: bot.py  database.py
keyboards/: all_kb.py  pagination_kb.py  start_kb.py
lexicon/: lexicon_ru.py
tests/: author.json  download_from_fantlab.py  edition.json  json.txt  work.json
(+3 files in other folders)
