[tool.poetry]
name = "infobooks-bot"
version = "0.1.0"
description = ""
authors = ["nadezhdaSwan <nalebedevawork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
redis = "^5.0.8"
redis-om = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
